Update emscripten.yml to match PR https://github.com/compiler-research/xeus-cpp/pull/199/files

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -605,6 +605,7 @@ jobs:
         pushd build
         export CMAKE_PREFIX_PATH=${{ env.PREFIX }} 
         export CMAKE_SYSTEM_PREFIX_PATH=${{ env.PREFIX }} 
+        export SYSROOT_PATH=$HOME/emsdk/upstream/emscripten/cache/sysroot
         emcmake cmake \
           -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}          \
           -DCMAKE_PREFIX_PATH=${{ env.PREFIX }}             \
@@ -612,5 +613,6 @@ jobs:
           -DXEUS_CPP_EMSCRIPTEN_WASM_BUILD=ON               \
           -DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON            \
           -DCppInterOp_DIR="${{ env.CPPINTEROP_BUILD_DIR }}/lib/cmake/CppInterOp"  \
+          -DSYSROOT_PATH=$SYSROOT_PATH                      \
           ..
         emmake make -j ${{ env.ncpus }}
