Fix copying xcpp.data for xeus-cpp-lite deploy page

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -185,7 +185,7 @@ jobs:
           micromamba activate xeus-lite-host
           python -m pip install jupyterlite-xeus
           jupyter lite build --XeusAddon.prefix=${{ env.PREFIX }} --output-dir dist
-          cp xcpp.data dist/extensions/@jupyterlite/xeus/static
+          cp $PREFIX/bin/xcpp.data dist/extensions/@jupyterlite/xeus/static
           cp $PREFIX/lib/libclangCppInterOp.so dist/extensions/@jupyterlite/xeus/static
 
     - name: Upload artifact
