Use Ninja to build llvm in the ci

--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -206,6 +206,7 @@ jobs:
         done
         brew upgrade openssl >/dev/null 2>&1 
         brew upgrade
+        brew install ninja
 
     - name: Build LLVM/Cling if the cache is invalid
       if: ${{ steps.cache.outputs.cache-hit != 'true' }}
@@ -238,11 +239,12 @@ jobs:
                 -DLLVM_ENABLE_ZSTD=OFF                             \
                 -DLLVM_ENABLE_TERMINFO=OFF                         \
                 -DLLVM_ENABLE_LIBXML2=OFF                          \
+                -G Ninja                                           \
                 ../llvm
-          cmake --build . --target clang --parallel ${{ env.ncpus }}
-          cmake --build . --target cling --parallel ${{ env.ncpus }}
+          ninja clang -j ${{ env.ncpus }}
+          ninja cling -j ${{ env.ncpus }}
           # Now build gtest.a and gtest_main for CppInterOp to run its tests.
-          cmake --build . --target gtest_main --parallel ${{ env.ncpus }}
+          ninja gtest_main -j ${{ env.ncpus }}
         else
           # Apply patches
           llvm_vers=$(echo "${{ matrix.clang-runtime }}" | tr '[:lower:]' '[:upper:]')
@@ -262,9 +264,9 @@ jobs:
                 -DLLVM_ENABLE_ZSTD=OFF                              \
                 -DLLVM_ENABLE_TERMINFO=OFF                          \
                 -DLLVM_ENABLE_LIBXML2=OFF                           \
+                -G Ninja                                            \
                 ../llvm
-          cmake --build . --target clang clang-repl --parallel ${{ env.ncpus }}
-          
+          ninja clang clang-repl -j ${{ env.ncpus }}
         fi
         cd ../
         rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
