Add nightly build forndeployment workflow

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
     - main
+  schedule:
+    - cron: '30 20 * * *' # Warning: Timezone dep - 20:00 is 1:00
     
 permissions:
   contents: read
